2007-06-17  Karl Berry  <karl@gnu.org>

	* makeinfo/lang.c (language_table): update from current list,
	write out update procedure for next time.
	* makeinfo/lang.h (language_code_type): update enum.
	* doc/texinfo.txi (documentlanguage): don't include the list of
	language codes, change is too rapid.

	* doc/texinfo.tex (\codequoteright, \codequoteleft): support
	@set txicodequoteundirected and 
	@set txicodequotebacktick, respectively, as well as the non-txi names.
	* doc/texinfo.txi (Inserting Quote Characters): new node.
	* NEWS: mention both.

2007-06-14  Karl Berry  <karl@gnu.org>

	* makeinfo/lang.c (cm_documentlanguage): add _CC part if necessary,
	or split LL_CC if that's given.  Set document_language so that
	getdocumenttext strings will be translated.
	* doc/texinfo.txi (documentlanguage):
	* NEWS: mention this.

	* util/gendocs_template: mention possibility of buying manuals

2007-06-13  Karl Berry  <karl@gnu.org>

	* makeinfo/xml.c (xml_insert_element_with_attribute): close
	menu_entry and menu_entry_comment elements before handling the
	detailmenu element (either start or end).
	From Thien-Thi Nguyen, 04 Jun 2007 01:18:37.

2007-06-03  Per Bothner  <per@bothner.com>

	* xml.c (docbook_element_list): Map ANCHOR to "anchor".
	* node.c (cm_anchor): Handle docbook.

2007-05-22  Karl Berry  <karl@gnu.org>

	* util/gendocs_template{,_min}: missing period on source link.

2007-05-21  Karl Berry  <karl@gnu.org>

	* makeinfo/multi.c (select_output_environment): C is not Perl.

	* util/install-info.c (--test, --debug): new options,
	via new variable chicken_flag and debug_flag,
	and (minimal) implementation thereof.
	(--silent): synonym for --quiet.
	* doc/texinfo.txi (Invoking install-info): document them.

2007-05-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Invoking install-info): document them.

2007-05-18  Norbert Preining  <preining@logic.at>

	* util/install-info.c (longopts): new options --remove-exactly,
	--section-regex.
	(main): handle them.
